--- a/Mobile_Module/src/pages/forgot_password/frg_pass.html
+++ b/Mobile_Module/src/pages/forgot_password/frg_pass.html
@@ -7,13 +7,16 @@
 </ion-header>
 
 
-<ion-content class = "forgot_password" padding>
-  <div padding-top>
-      <h2>Forgot your Password ?</h2>
-      <h5> Enter your Email address, the password will be mailed to you. </h5>
+<ion-content class = "forgot_password">
+  <ion-card class="color">
+    <ion-img  src = "assets/img/forgot.jpg" class="center-image"> </ion-img>
+  <div>
+      <h2 style="color:white;" align="center">Forgot your Password ?</h2>
+      <h5 style="color:white;" align="center"> Enter your Email address, the password will be mailed to you. </h5>
   </div>
   <ion-item>
     <ion-input type = "email" placeholder ="Email Id"> </ion-input>
   </ion-item>
   <button type="submit" class="send" ion-button color="primary" block >Send</button>
+</ion-card>
 </ion-content>
